Home - Project - Issue display done.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,26 +4,16 @@ server:
 logging:
   level:
     root: info
-    bala.retention: DEBUG
+    bala.signoff: info
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-  file.name: logs/retension-demo.log
+  file.name: logs/my-signoff.log
 
 spring:
   application:
-    name: Retention
-  # data:
+    name: MySignoff
   mongodb:
     uri: mongodb://bala:pass@localhost:27017/demo?authSource=admin
     # # uri: mongodb://root:pass@localhost:27017/demo?authSource=admin
     # uri: mongodb://root:pass@localhost:27017/admin?authSource=admin
-
-      # uri: mongodb://bala:pass@localhost:27017/demo?authSource=admin # (Optional) A full connection URI, overrides host, port, database, username, and password if present
-      # host: localhost # The MongoDB server host (e.g., localhost, IP address)
-      # port: 27017 # The MongoDB server port (default is 27017)
-      # database: demo # The name of the database to connect to
-      # username: bala # (Optional) Username for authentication
-      # password: pass # (Optional) Password for authentication
-      # authentication-database: admin # (Optional) The database to authenticate against (if different from 'database')
-      # auto-index-creation: true
